test/sema/typeck/pattern/let-else-must-diverge.dora
fn f(value: Bool) {
    let true = value else {};
}
